Adds the get all books functionality

--- a/css/home_pg.css
+++ b/css/home_pg.css
@@ -31,7 +31,7 @@ aside#leftbar {
     padding-right: 20px; 
     color: #cccccc;
 }
-ul#orders li{
+ul#books li{
     list-style: none;
     padding: 20px;
     border: #cccccc solid 1px;
